--- a/docker/mysql/conf/mysqld.cnf
+++ b/docker/mysql/conf/mysqld.cnf
@@ -30,22 +30,23 @@
 pid-file        = /var/run/mysqld/mysqld.pid
 socket          = /var/run/mysqld/mysqld.sock
 datadir         = /var/lib/mysql
+character-set-server=utf8mb4
 #log-error      = /var/log/mysql/error.log
 # By default we only accept connections from localhost
-#bind-address   = 127.0.0.1
+bind-address   = 0.0.0.0
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links=0
 
-# 开启慢查
+# open slow log 
 slow_query_log = 1
 
-# 多长时间会被记录下来
-long_query_time = 1
+# set long quer time
+long_query_time = 0
 slow_query_log_file = /var/log/docker_log/mysql/slow.log
 
-# binlog的格式
+# set binlog_format
 binlog_format = STATEMENT
-# binlog记录的日志
+# open binlog
 log-bin=/var/log/mysql-binlog/mysql-binlog
 server-id = 1
 
