--- a/docker/mysql/conf/mysqld.cnf
+++ b/docker/mysql/conf/mysqld.cnf
@@ -27,6 +27,11 @@
 # http://dev.mysql.com/doc/mysql/en/server-system-variables.html
 
 [mysqld]
+
+#GTID
+gtid_mode = on
+enforce-gtid-consistency = ON
+
 pid-file        = /var/run/mysqld/mysqld.pid
 socket          = /var/run/mysqld/mysqld.sock
 datadir         = /var/lib/mysql
